Remove unused functions